[gd_scene load_steps=8 format=2]

[ext_resource path="res://title_screen/title_screen.gd" type="Script" id=1]
[ext_resource path="res://title_screen/system failure.png" type="Texture" id=2]
[ext_resource path="res://title_screen/buttons/ContinueButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_screen/buttons/NewGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://title_screen/buttons/OptionsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://title_screen/Fonts/vt323_20.tres" type="DynamicFont" id=6]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=7]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 140.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 144.0
margin_right = 1040.0
margin_bottom = 509.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 365.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 72.0
margin_right = 518.0
margin_bottom = 132.0

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 152.0
margin_right = 518.0
margin_bottom = 212.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 232.0
margin_right = 518.0
margin_bottom = 292.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 365.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Story" type="Label" parent="Menu/CenterRow/CenterContainer"]
margin_left = 35.0
margin_right = 483.0
margin_bottom = 365.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 1, 0.243137, 1 )
custom_colors/font_color_shadow = Color( 0, 0.521569, 0.0980392, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "FADE IN ON:

	COMPUTER SCREEN

	So close it has no boundaries.

	A blinking cursor pulses in the electric darkness like a
	heart coursing with phosphorous light, burning beneath
	the derma of black-neon glass.

	A PHONE begins to RING, we hear it as though we were 
	making the call.  The cursor continues to throb,
	relentlessly patient, until --

					MAN (V.O.)
			Hello?"

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 513.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 1, 0.243137, 1 )
custom_colors/font_color_shadow = Color( 0, 0.521569, 0.0980392, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Version nivel.morte
Manel e Marrocos Studio"

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
